// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Primitives/DataTable Data Table 1`] = `
<table
  className="table"
>
  <thead>
    <th>
      First Name
    </th>
    <th>
      Last Name
    </th>
    <th>
      Age
    </th>
    <th>
      Sign Up Date
    </th>
    <th>
      Foo
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Joshua
      </td>
      <td>
        Buckridge
      </td>
      <td>
        9
      </td>
      <td>
        <time
          dateTime={"2020-09-29T06:39:15.478Z"}
          title="2020-09-29T06:39:15+00:00"
        >
          September 29, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Justyn
      </td>
      <td>
        Kshlerin
      </td>
      <td>
        52
      </td>
      <td>
        <time
          dateTime={"2020-08-27T01:47:43.013Z"}
          title="2020-08-27T01:47:43+00:00"
        >
          August 27, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Jarred
      </td>
      <td>
        Simonis
      </td>
      <td>
        88
      </td>
      <td>
        <time
          dateTime={"2021-01-20T09:45:23.686Z"}
          title="2021-01-20T09:45:23+00:00"
        >
          January 20, 2021
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Darlene
      </td>
      <td>
        Bogisich
      </td>
      <td>
        21
      </td>
      <td>
        <time
          dateTime={"2020-04-15T07:09:51.147Z"}
          title="2020-04-15T07:09:51+00:00"
        >
          April 15, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Mose
      </td>
      <td>
        Parker
      </td>
      <td>
        98
      </td>
      <td>
        <time
          dateTime={"2019-11-19T16:05:25.388Z"}
          title="2019-11-19T16:05:25+00:00"
        >
          November 19, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Renee
      </td>
      <td>
        Dach
      </td>
      <td>
        33
      </td>
      <td>
        <time
          dateTime={"2019-09-13T15:40:38.366Z"}
          title="2019-09-13T15:40:38+00:00"
        >
          September 13, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kaylee
      </td>
      <td>
        Hodkiewicz
      </td>
      <td>
        33
      </td>
      <td>
        <time
          dateTime={"2020-01-07T17:33:28.797Z"}
          title="2020-01-07T17:33:28+00:00"
        >
          January 7, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Celestine
      </td>
      <td>
        Ankunding
      </td>
      <td>
        94
      </td>
      <td>
        <time
          dateTime={"2020-10-11T15:19:06.363Z"}
          title="2020-10-11T15:19:06+00:00"
        >
          October 11, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Hannah
      </td>
      <td>
        Connelly
      </td>
      <td>
        72
      </td>
      <td>
        <time
          dateTime={"2020-06-29T11:23:24.282Z"}
          title="2020-06-29T11:23:24+00:00"
        >
          June 29, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Elwin
      </td>
      <td>
        Wilkinson
      </td>
      <td>
        61
      </td>
      <td>
        <time
          dateTime={"2019-11-03T06:29:20.579Z"}
          title="2019-11-03T06:29:20+00:00"
        >
          November 3, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Karley
      </td>
      <td>
        Olson
      </td>
      <td>
        83
      </td>
      <td>
        <time
          dateTime={"2020-07-13T18:26:51.751Z"}
          title="2020-07-13T18:26:51+00:00"
        >
          July 13, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Roger
      </td>
      <td>
        Emmerich
      </td>
      <td>
        60
      </td>
      <td>
        <time
          dateTime={"2019-04-02T00:20:20.223Z"}
          title="2019-04-02T00:20:20+00:00"
        >
          April 2, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Jude
      </td>
      <td>
        Rosenbaum
      </td>
      <td>
        12
      </td>
      <td>
        <time
          dateTime={"2020-04-27T22:57:02.343Z"}
          title="2020-04-27T22:57:02+00:00"
        >
          April 27, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Cody
      </td>
      <td>
        Kiehn
      </td>
      <td>
        56
      </td>
      <td>
        <time
          dateTime={"2020-06-17T07:20:03.530Z"}
          title="2020-06-17T07:20:03+00:00"
        >
          June 17, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Vivianne
      </td>
      <td>
        Kub
      </td>
      <td>
        94
      </td>
      <td>
        <time
          dateTime={"2021-02-25T10:34:34.502Z"}
          title="2021-02-25T10:34:34+00:00"
        >
          February 25, 2021
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Celestino
      </td>
      <td>
        Beahan
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2019-05-07T22:40:56.293Z"}
          title="2019-05-07T22:40:56+00:00"
        >
          May 7, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Albert
      </td>
      <td>
        Hane
      </td>
      <td>
        37
      </td>
      <td>
        <time
          dateTime={"2020-07-14T21:39:56.615Z"}
          title="2020-07-14T21:39:56+00:00"
        >
          July 14, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Lucious
      </td>
      <td>
        VonRueden
      </td>
      <td>
        48
      </td>
      <td>
        <time
          dateTime={"2020-09-04T12:53:16.276Z"}
          title="2020-09-04T12:53:16+00:00"
        >
          September 4, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Ike
      </td>
      <td>
        Hills
      </td>
      <td>
        2
      </td>
      <td>
        <time
          dateTime={"2020-04-11T05:40:51.435Z"}
          title="2020-04-11T05:40:51+00:00"
        >
          April 11, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Donnie
      </td>
      <td>
        Mosciski
      </td>
      <td>
        98
      </td>
      <td>
        <time
          dateTime={"2020-07-01T04:49:26.057Z"}
          title="2020-07-01T04:49:26+00:00"
        >
          July 1, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Herbert
      </td>
      <td>
        Strosin
      </td>
      <td>
        66
      </td>
      <td>
        <time
          dateTime={"2019-03-27T04:37:10.953Z"}
          title="2019-03-27T04:37:10+00:00"
        >
          March 27, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Gabrielle
      </td>
      <td>
        Robel
      </td>
      <td>
        22
      </td>
      <td>
        <time
          dateTime={"2019-12-16T14:12:21.778Z"}
          title="2019-12-16T14:12:21+00:00"
        >
          December 16, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Roselyn
      </td>
      <td>
        Rohan
      </td>
      <td>
        4
      </td>
      <td>
        <time
          dateTime={"2019-09-05T19:43:39.114Z"}
          title="2019-09-05T19:43:39+00:00"
        >
          September 5, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Solon
      </td>
      <td>
        Nienow
      </td>
      <td>
        20
      </td>
      <td>
        <time
          dateTime={"2020-10-16T02:28:43.106Z"}
          title="2020-10-16T02:28:43+00:00"
        >
          October 16, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Lambert
      </td>
      <td>
        Dickens
      </td>
      <td>
        42
      </td>
      <td>
        <time
          dateTime={"2019-05-30T10:28:57.098Z"}
          title="2019-05-30T10:28:57+00:00"
        >
          May 30, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Nickolas
      </td>
      <td>
        Erdman
      </td>
      <td>
        4
      </td>
      <td>
        <time
          dateTime={"2020-06-06T01:29:38.998Z"}
          title="2020-06-06T01:29:38+00:00"
        >
          June 6, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Emelia
      </td>
      <td>
        Bergstrom
      </td>
      <td>
        8
      </td>
      <td>
        <time
          dateTime={"2020-07-19T05:45:55.342Z"}
          title="2020-07-19T05:45:55+00:00"
        >
          July 19, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kevon
      </td>
      <td>
        Stark
      </td>
      <td>
        8
      </td>
      <td>
        <time
          dateTime={"2019-04-30T07:31:57.161Z"}
          title="2019-04-30T07:31:57+00:00"
        >
          April 30, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Corine
      </td>
      <td>
        Yost
      </td>
      <td>
        89
      </td>
      <td>
        <time
          dateTime={"2019-10-18T13:27:06.175Z"}
          title="2019-10-18T13:27:06+00:00"
        >
          October 18, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Estel
      </td>
      <td>
        Welch
      </td>
      <td>
        68
      </td>
      <td>
        <time
          dateTime={"2020-12-19T08:32:21.789Z"}
          title="2020-12-19T08:32:21+00:00"
        >
          December 19, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Curtis
      </td>
      <td>
        O'Keefe
      </td>
      <td>
        87
      </td>
      <td>
        <time
          dateTime={"2019-12-03T00:57:58.831Z"}
          title="2019-12-03T00:57:58+00:00"
        >
          December 3, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Myra
      </td>
      <td>
        Labadie
      </td>
      <td>
        9
      </td>
      <td>
        <time
          dateTime={"2019-11-27T14:43:41.936Z"}
          title="2019-11-27T14:43:41+00:00"
        >
          November 27, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Orin
      </td>
      <td>
        Zemlak
      </td>
      <td>
        16
      </td>
      <td>
        <time
          dateTime={"2019-11-14T18:17:14.250Z"}
          title="2019-11-14T18:17:14+00:00"
        >
          November 14, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Serenity
      </td>
      <td>
        Labadie
      </td>
      <td>
        4
      </td>
      <td>
        <time
          dateTime={"2020-08-25T06:54:25.876Z"}
          title="2020-08-25T06:54:25+00:00"
        >
          August 25, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Coty
      </td>
      <td>
        Hamill
      </td>
      <td>
        100
      </td>
      <td>
        <time
          dateTime={"2020-10-04T14:50:38.937Z"}
          title="2020-10-04T14:50:38+00:00"
        >
          October 4, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Foster
      </td>
      <td>
        Bauch
      </td>
      <td>
        83
      </td>
      <td>
        <time
          dateTime={"2020-02-01T14:58:39.799Z"}
          title="2020-02-01T14:58:39+00:00"
        >
          February 1, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Mozelle
      </td>
      <td>
        Lowe
      </td>
      <td>
        87
      </td>
      <td>
        <time
          dateTime={"2019-12-31T15:45:14.245Z"}
          title="2019-12-31T15:45:14+00:00"
        >
          December 31, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Tia
      </td>
      <td>
        McDermott
      </td>
      <td>
        24
      </td>
      <td>
        <time
          dateTime={"2020-12-30T14:40:16.915Z"}
          title="2020-12-30T14:40:16+00:00"
        >
          December 30, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Lynn
      </td>
      <td>
        Strosin
      </td>
      <td>
        15
      </td>
      <td>
        <time
          dateTime={"2019-04-03T05:44:40.460Z"}
          title="2019-04-03T05:44:40+00:00"
        >
          April 3, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Garrett
      </td>
      <td>
        Moore
      </td>
      <td>
        81
      </td>
      <td>
        <time
          dateTime={"2019-07-26T09:11:10.666Z"}
          title="2019-07-26T09:11:10+00:00"
        >
          July 26, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Effie
      </td>
      <td>
        Ruecker
      </td>
      <td>
        53
      </td>
      <td>
        <time
          dateTime={"2019-04-02T17:38:02.820Z"}
          title="2019-04-02T17:38:02+00:00"
        >
          April 2, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Vernice
      </td>
      <td>
        Dickinson
      </td>
      <td>
        99
      </td>
      <td>
        <time
          dateTime={"2021-01-08T06:51:48.544Z"}
          title="2021-01-08T06:51:48+00:00"
        >
          January 8, 2021
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Bertram
      </td>
      <td>
        Kuphal
      </td>
      <td>
        25
      </td>
      <td>
        <time
          dateTime={"2019-02-04T23:37:08.588Z"}
          title="2019-02-04T23:37:08+00:00"
        >
          February 4, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Oceane
      </td>
      <td>
        Schowalter
      </td>
      <td>
        57
      </td>
      <td>
        <time
          dateTime={"2020-12-11T03:04:06.672Z"}
          title="2020-12-11T03:04:06+00:00"
        >
          December 11, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Cedrick
      </td>
      <td>
        Hagenes
      </td>
      <td>
        24
      </td>
      <td>
        <time
          dateTime={"2019-03-28T15:24:55.254Z"}
          title="2019-03-28T15:24:55+00:00"
        >
          March 28, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kayley
      </td>
      <td>
        O'Reilly
      </td>
      <td>
        39
      </td>
      <td>
        <time
          dateTime={"2019-05-09T19:43:13.704Z"}
          title="2019-05-09T19:43:13+00:00"
        >
          May 9, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Keshawn
      </td>
      <td>
        Roberts
      </td>
      <td>
        38
      </td>
      <td>
        <time
          dateTime={"2019-01-26T13:27:33.379Z"}
          title="2019-01-26T13:27:33+00:00"
        >
          January 26, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Frieda
      </td>
      <td>
        Satterfield
      </td>
      <td>
        27
      </td>
      <td>
        <time
          dateTime={"2020-04-13T12:48:58.216Z"}
          title="2020-04-13T12:48:58+00:00"
        >
          April 13, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Wilbert
      </td>
      <td>
        Kunze
      </td>
      <td>
        83
      </td>
      <td>
        <time
          dateTime={"2020-10-02T00:08:42.715Z"}
          title="2020-10-02T00:08:42+00:00"
        >
          October 2, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Idell
      </td>
      <td>
        Lemke
      </td>
      <td>
        77
      </td>
      <td>
        <time
          dateTime={"2020-11-23T09:26:13.764Z"}
          title="2020-11-23T09:26:13+00:00"
        >
          November 23, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Primitives/DataTable Nested Data Table 1`] = `
<table
  className="table"
>
  <thead>
    <th>
      First Name
    </th>
    <th>
      Last Name
    </th>
    <th>
      Age
    </th>
    <th>
      Sign Up Date
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Destiney
      </td>
      <td>
        Schaden
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2020-11-16T06:01:56.359Z"}
          title="2020-11-16T06:01:56+00:00"
        >
          November 16, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Garrick
      </td>
      <td>
        Bashirian
      </td>
      <td>
        19
      </td>
      <td>
        <time
          dateTime={"2020-11-27T19:39:51.841Z"}
          title="2020-11-27T19:39:51+00:00"
        >
          November 27, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Osbaldo
      </td>
      <td>
        Bartoletti
      </td>
      <td>
        67
      </td>
      <td>
        <time
          dateTime={"2020-02-14T19:35:04.750Z"}
          title="2020-02-14T19:35:04+00:00"
        >
          February 14, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Izabella
      </td>
      <td>
        Beier
      </td>
      <td>
        14
      </td>
      <td>
        <time
          dateTime={"2019-05-29T10:58:26.801Z"}
          title="2019-05-29T10:58:26+00:00"
        >
          May 29, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Abe
      </td>
      <td>
        Ferry
      </td>
      <td>
        58
      </td>
      <td>
        <time
          dateTime={"2019-12-27T18:44:50.032Z"}
          title="2019-12-27T18:44:50+00:00"
        >
          December 27, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Carlos
      </td>
      <td>
        Schultz
      </td>
      <td>
        10
      </td>
      <td>
        <time
          dateTime={"2019-03-28T07:47:31.604Z"}
          title="2019-03-28T07:47:31+00:00"
        >
          March 28, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Santiago
      </td>
      <td>
        Pollich
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2019-06-11T05:42:03.447Z"}
          title="2019-06-11T05:42:03+00:00"
        >
          June 11, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Kiana
      </td>
      <td>
        Hoppe
      </td>
      <td>
        94
      </td>
      <td>
        <time
          dateTime={"2019-02-04T13:39:16.378Z"}
          title="2019-02-04T13:39:16+00:00"
        >
          February 4, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Anita
      </td>
      <td>
        Russel
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2019-02-06T02:08:11.807Z"}
          title="2019-02-06T02:08:11+00:00"
        >
          February 6, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Isabell
      </td>
      <td>
        Wilkinson
      </td>
      <td>
        10
      </td>
      <td>
        <time
          dateTime={"2019-05-25T20:03:23.610Z"}
          title="2019-05-25T20:03:23+00:00"
        >
          May 25, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Elva
      </td>
      <td>
        Kunze
      </td>
      <td>
        99
      </td>
      <td>
        <time
          dateTime={"2019-05-08T05:15:53.193Z"}
          title="2019-05-08T05:15:53+00:00"
        >
          May 8, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Benjamin
      </td>
      <td>
        Kunze
      </td>
      <td>
        54
      </td>
      <td>
        <time
          dateTime={"2020-10-12T18:58:37.702Z"}
          title="2020-10-12T18:58:37+00:00"
        >
          October 12, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Tianna
      </td>
      <td>
        Rippin
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2019-05-02T14:35:59.935Z"}
          title="2019-05-02T14:35:59+00:00"
        >
          May 2, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Audie
      </td>
      <td>
        Pollich
      </td>
      <td>
        89
      </td>
      <td>
        <time
          dateTime={"2019-10-10T00:47:20.986Z"}
          title="2019-10-10T00:47:20+00:00"
        >
          October 10, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Garnett
      </td>
      <td>
        Daugherty
      </td>
      <td>
        13
      </td>
      <td>
        <time
          dateTime={"2020-05-13T10:09:28.956Z"}
          title="2020-05-13T10:09:28+00:00"
        >
          May 13, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Janie
      </td>
      <td>
        Miller
      </td>
      <td>
        32
      </td>
      <td>
        <time
          dateTime={"2020-04-16T20:15:45.128Z"}
          title="2020-04-16T20:15:45+00:00"
        >
          April 16, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Macy
      </td>
      <td>
        Haley
      </td>
      <td>
        69
      </td>
      <td>
        <time
          dateTime={"2019-03-12T17:56:35.849Z"}
          title="2019-03-12T17:56:35+00:00"
        >
          March 12, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Alice
      </td>
      <td>
        McClure
      </td>
      <td>
        60
      </td>
      <td>
        <time
          dateTime={"2019-07-07T07:09:53.803Z"}
          title="2019-07-07T07:09:53+00:00"
        >
          July 7, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Ara
      </td>
      <td>
        Fritsch
      </td>
      <td>
        65
      </td>
      <td>
        <time
          dateTime={"2019-05-20T00:08:06.085Z"}
          title="2019-05-20T00:08:06+00:00"
        >
          May 20, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Leonora
      </td>
      <td>
        Bayer
      </td>
      <td>
        68
      </td>
      <td>
        <time
          dateTime={"2019-03-26T10:22:53.934Z"}
          title="2019-03-26T10:22:53+00:00"
        >
          March 26, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Corrine
      </td>
      <td>
        Beier
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2020-11-17T11:35:28.797Z"}
          title="2020-11-17T11:35:28+00:00"
        >
          November 17, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Tyshawn
      </td>
      <td>
        Schneider
      </td>
      <td>
        26
      </td>
      <td>
        <time
          dateTime={"2020-11-18T22:44:05.602Z"}
          title="2020-11-18T22:44:05+00:00"
        >
          November 18, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Daron
      </td>
      <td>
        Greenholt
      </td>
      <td>
        77
      </td>
      <td>
        <time
          dateTime={"2020-09-24T08:40:48.045Z"}
          title="2020-09-24T08:40:48+00:00"
        >
          September 24, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Jaycee
      </td>
      <td>
        Zemlak
      </td>
      <td>
        31
      </td>
      <td>
        <time
          dateTime={"2019-06-25T18:23:27.901Z"}
          title="2019-06-25T18:23:27+00:00"
        >
          June 25, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Aryanna
      </td>
      <td>
        Zieme
      </td>
      <td>
        88
      </td>
      <td>
        <time
          dateTime={"2020-03-26T07:05:01.026Z"}
          title="2020-03-26T07:05:01+00:00"
        >
          March 26, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Lori
      </td>
      <td>
        Donnelly
      </td>
      <td>
        20
      </td>
      <td>
        <time
          dateTime={"2019-04-25T20:08:53.608Z"}
          title="2019-04-25T20:08:53+00:00"
        >
          April 25, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Kaley
      </td>
      <td>
        Wehner
      </td>
      <td>
        63
      </td>
      <td>
        <time
          dateTime={"2020-08-01T08:22:39.739Z"}
          title="2020-08-01T08:22:39+00:00"
        >
          August 1, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Jadyn
      </td>
      <td>
        Goodwin
      </td>
      <td>
        75
      </td>
      <td>
        <time
          dateTime={"2020-06-24T16:56:30.607Z"}
          title="2020-06-24T16:56:30+00:00"
        >
          June 24, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Lavinia
      </td>
      <td>
        Hayes
      </td>
      <td>
        100
      </td>
      <td>
        <time
          dateTime={"2020-07-08T18:11:42.919Z"}
          title="2020-07-08T18:11:42+00:00"
        >
          July 8, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Elfrieda
      </td>
      <td>
        Heller
      </td>
      <td>
        13
      </td>
      <td>
        <time
          dateTime={"2020-11-12T08:41:45.341Z"}
          title="2020-11-12T08:41:45+00:00"
        >
          November 12, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Harry
      </td>
      <td>
        Nienow
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2020-06-14T14:52:48.582Z"}
          title="2020-06-14T14:52:48+00:00"
        >
          June 14, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Heaven
      </td>
      <td>
        Roberts
      </td>
      <td>
        65
      </td>
      <td>
        <time
          dateTime={"2019-01-14T03:41:47.716Z"}
          title="2019-01-14T03:41:47+00:00"
        >
          January 14, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Monserrat
      </td>
      <td>
        Quigley
      </td>
      <td>
        11
      </td>
      <td>
        <time
          dateTime={"2020-06-27T14:56:15.878Z"}
          title="2020-06-27T14:56:15+00:00"
        >
          June 27, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Ardella
      </td>
      <td>
        Green
      </td>
      <td>
        95
      </td>
      <td>
        <time
          dateTime={"2020-11-18T03:07:37.125Z"}
          title="2020-11-18T03:07:37+00:00"
        >
          November 18, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Brenna
      </td>
      <td>
        Zboncak
      </td>
      <td>
        54
      </td>
      <td>
        <time
          dateTime={"2019-05-14T03:12:23.351Z"}
          title="2019-05-14T03:12:23+00:00"
        >
          May 14, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Mike
      </td>
      <td>
        O'Keefe
      </td>
      <td>
        5
      </td>
      <td>
        <time
          dateTime={"2019-08-11T20:54:29.510Z"}
          title="2019-08-11T20:54:29+00:00"
        >
          August 11, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Alvena
      </td>
      <td>
        Mohr
      </td>
      <td>
        83
      </td>
      <td>
        <time
          dateTime={"2020-03-21T09:26:22.702Z"}
          title="2020-03-21T09:26:22+00:00"
        >
          March 21, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Dariana
      </td>
      <td>
        Heaney
      </td>
      <td>
        82
      </td>
      <td>
        <time
          dateTime={"2019-05-22T22:51:41.863Z"}
          title="2019-05-22T22:51:41+00:00"
        >
          May 22, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Kailey
      </td>
      <td>
        White
      </td>
      <td>
        50
      </td>
      <td>
        <time
          dateTime={"2020-05-30T19:04:58.819Z"}
          title="2020-05-30T19:04:58+00:00"
        >
          May 30, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Savanah
      </td>
      <td>
        Dibbert
      </td>
      <td>
        81
      </td>
      <td>
        <time
          dateTime={"2020-10-01T02:08:27.583Z"}
          title="2020-10-01T02:08:27+00:00"
        >
          October 1, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Estevan
      </td>
      <td>
        Pfannerstill
      </td>
      <td>
        58
      </td>
      <td>
        <time
          dateTime={"2019-09-01T01:52:28.661Z"}
          title="2019-09-01T01:52:28+00:00"
        >
          September 1, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Celestino
      </td>
      <td>
        Spinka
      </td>
      <td>
        68
      </td>
      <td>
        <time
          dateTime={"2019-04-08T02:34:10.976Z"}
          title="2019-04-08T02:34:10+00:00"
        >
          April 8, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Arjun
      </td>
      <td>
        Treutel
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2019-08-05T18:49:24.213Z"}
          title="2019-08-05T18:49:24+00:00"
        >
          August 5, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Travon
      </td>
      <td>
        Yundt
      </td>
      <td>
        79
      </td>
      <td>
        <time
          dateTime={"2019-11-01T14:31:14.834Z"}
          title="2019-11-01T14:31:14+00:00"
        >
          November 1, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Matt
      </td>
      <td>
        Wunsch
      </td>
      <td>
        4
      </td>
      <td>
        <time
          dateTime={"2020-03-31T04:12:04.011Z"}
          title="2020-03-31T04:12:04+00:00"
        >
          March 31, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Haylie
      </td>
      <td>
        Johnson
      </td>
      <td>
        1
      </td>
      <td>
        <time
          dateTime={"2020-01-18T01:44:02.063Z"}
          title="2020-01-18T01:44:02+00:00"
        >
          January 18, 2020
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Prince
      </td>
      <td>
        Reinger
      </td>
      <td>
        37
      </td>
      <td>
        <time
          dateTime={"2021-01-05T14:54:22.171Z"}
          title="2021-01-05T14:54:22+00:00"
        >
          January 5, 2021
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Rollin
      </td>
      <td>
        Olson
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2019-12-15T03:32:21.192Z"}
          title="2019-12-15T03:32:21+00:00"
        >
          December 15, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Nicole
      </td>
      <td>
        Grant
      </td>
      <td>
        18
      </td>
      <td>
        <time
          dateTime={"2019-03-22T11:29:37.737Z"}
          title="2019-03-22T11:29:37+00:00"
        >
          March 22, 2019
        </time>
      </td>
    </tr>
    <tr>
      <td>
        Eileen
      </td>
      <td>
        Hauck
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2020-07-31T21:33:20.697Z"}
          title="2020-07-31T21:33:20+00:00"
        >
          July 31, 2020
        </time>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Primitives/DataTable Nested Data Table For Testing 1`] = `
<table
  className="table"
>
  <thead>
    <th>
      First Name
    </th>
    <th>
      Last Name
    </th>
    <th>
      This column is supposed to empty. It's here to prove typescript detects invalid column access.
    </th>
    <th>
      Age
    </th>
    <th>
      Sign Up Date
    </th>
    <th>
      This column is supposed to empty. It's here to prove typescript detects invalid column access.
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Destiney
      </td>
      <td>
        Schaden
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2020-11-16T06:01:56.359Z"}
          title="2020-11-16T06:01:56+00:00"
        >
          November 16, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Garrick
      </td>
      <td>
        Bashirian
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        19
      </td>
      <td>
        <time
          dateTime={"2020-11-27T19:39:51.841Z"}
          title="2020-11-27T19:39:51+00:00"
        >
          November 27, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Osbaldo
      </td>
      <td>
        Bartoletti
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        67
      </td>
      <td>
        <time
          dateTime={"2020-02-14T19:35:04.750Z"}
          title="2020-02-14T19:35:04+00:00"
        >
          February 14, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Izabella
      </td>
      <td>
        Beier
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        14
      </td>
      <td>
        <time
          dateTime={"2019-05-29T10:58:26.801Z"}
          title="2019-05-29T10:58:26+00:00"
        >
          May 29, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Abe
      </td>
      <td>
        Ferry
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        58
      </td>
      <td>
        <time
          dateTime={"2019-12-27T18:44:50.032Z"}
          title="2019-12-27T18:44:50+00:00"
        >
          December 27, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Carlos
      </td>
      <td>
        Schultz
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        10
      </td>
      <td>
        <time
          dateTime={"2019-03-28T07:47:31.604Z"}
          title="2019-03-28T07:47:31+00:00"
        >
          March 28, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Santiago
      </td>
      <td>
        Pollich
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2019-06-11T05:42:03.447Z"}
          title="2019-06-11T05:42:03+00:00"
        >
          June 11, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kiana
      </td>
      <td>
        Hoppe
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        94
      </td>
      <td>
        <time
          dateTime={"2019-02-04T13:39:16.378Z"}
          title="2019-02-04T13:39:16+00:00"
        >
          February 4, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Anita
      </td>
      <td>
        Russel
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2019-02-06T02:08:11.807Z"}
          title="2019-02-06T02:08:11+00:00"
        >
          February 6, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Isabell
      </td>
      <td>
        Wilkinson
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        10
      </td>
      <td>
        <time
          dateTime={"2019-05-25T20:03:23.610Z"}
          title="2019-05-25T20:03:23+00:00"
        >
          May 25, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Elva
      </td>
      <td>
        Kunze
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        99
      </td>
      <td>
        <time
          dateTime={"2019-05-08T05:15:53.193Z"}
          title="2019-05-08T05:15:53+00:00"
        >
          May 8, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Benjamin
      </td>
      <td>
        Kunze
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        54
      </td>
      <td>
        <time
          dateTime={"2020-10-12T18:58:37.702Z"}
          title="2020-10-12T18:58:37+00:00"
        >
          October 12, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Tianna
      </td>
      <td>
        Rippin
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2019-05-02T14:35:59.935Z"}
          title="2019-05-02T14:35:59+00:00"
        >
          May 2, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Audie
      </td>
      <td>
        Pollich
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        89
      </td>
      <td>
        <time
          dateTime={"2019-10-10T00:47:20.986Z"}
          title="2019-10-10T00:47:20+00:00"
        >
          October 10, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Garnett
      </td>
      <td>
        Daugherty
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        13
      </td>
      <td>
        <time
          dateTime={"2020-05-13T10:09:28.956Z"}
          title="2020-05-13T10:09:28+00:00"
        >
          May 13, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Janie
      </td>
      <td>
        Miller
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        32
      </td>
      <td>
        <time
          dateTime={"2020-04-16T20:15:45.128Z"}
          title="2020-04-16T20:15:45+00:00"
        >
          April 16, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Macy
      </td>
      <td>
        Haley
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        69
      </td>
      <td>
        <time
          dateTime={"2019-03-12T17:56:35.849Z"}
          title="2019-03-12T17:56:35+00:00"
        >
          March 12, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Alice
      </td>
      <td>
        McClure
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        60
      </td>
      <td>
        <time
          dateTime={"2019-07-07T07:09:53.803Z"}
          title="2019-07-07T07:09:53+00:00"
        >
          July 7, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Ara
      </td>
      <td>
        Fritsch
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        65
      </td>
      <td>
        <time
          dateTime={"2019-05-20T00:08:06.085Z"}
          title="2019-05-20T00:08:06+00:00"
        >
          May 20, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Leonora
      </td>
      <td>
        Bayer
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        68
      </td>
      <td>
        <time
          dateTime={"2019-03-26T10:22:53.934Z"}
          title="2019-03-26T10:22:53+00:00"
        >
          March 26, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Corrine
      </td>
      <td>
        Beier
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        35
      </td>
      <td>
        <time
          dateTime={"2020-11-17T11:35:28.797Z"}
          title="2020-11-17T11:35:28+00:00"
        >
          November 17, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Tyshawn
      </td>
      <td>
        Schneider
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        26
      </td>
      <td>
        <time
          dateTime={"2020-11-18T22:44:05.602Z"}
          title="2020-11-18T22:44:05+00:00"
        >
          November 18, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Daron
      </td>
      <td>
        Greenholt
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        77
      </td>
      <td>
        <time
          dateTime={"2020-09-24T08:40:48.045Z"}
          title="2020-09-24T08:40:48+00:00"
        >
          September 24, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Jaycee
      </td>
      <td>
        Zemlak
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        31
      </td>
      <td>
        <time
          dateTime={"2019-06-25T18:23:27.901Z"}
          title="2019-06-25T18:23:27+00:00"
        >
          June 25, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Aryanna
      </td>
      <td>
        Zieme
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        88
      </td>
      <td>
        <time
          dateTime={"2020-03-26T07:05:01.026Z"}
          title="2020-03-26T07:05:01+00:00"
        >
          March 26, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Lori
      </td>
      <td>
        Donnelly
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        20
      </td>
      <td>
        <time
          dateTime={"2019-04-25T20:08:53.608Z"}
          title="2019-04-25T20:08:53+00:00"
        >
          April 25, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kaley
      </td>
      <td>
        Wehner
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        63
      </td>
      <td>
        <time
          dateTime={"2020-08-01T08:22:39.739Z"}
          title="2020-08-01T08:22:39+00:00"
        >
          August 1, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Jadyn
      </td>
      <td>
        Goodwin
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        75
      </td>
      <td>
        <time
          dateTime={"2020-06-24T16:56:30.607Z"}
          title="2020-06-24T16:56:30+00:00"
        >
          June 24, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Lavinia
      </td>
      <td>
        Hayes
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        100
      </td>
      <td>
        <time
          dateTime={"2020-07-08T18:11:42.919Z"}
          title="2020-07-08T18:11:42+00:00"
        >
          July 8, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Elfrieda
      </td>
      <td>
        Heller
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        13
      </td>
      <td>
        <time
          dateTime={"2020-11-12T08:41:45.341Z"}
          title="2020-11-12T08:41:45+00:00"
        >
          November 12, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Harry
      </td>
      <td>
        Nienow
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2020-06-14T14:52:48.582Z"}
          title="2020-06-14T14:52:48+00:00"
        >
          June 14, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Heaven
      </td>
      <td>
        Roberts
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        65
      </td>
      <td>
        <time
          dateTime={"2019-01-14T03:41:47.716Z"}
          title="2019-01-14T03:41:47+00:00"
        >
          January 14, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Monserrat
      </td>
      <td>
        Quigley
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        11
      </td>
      <td>
        <time
          dateTime={"2020-06-27T14:56:15.878Z"}
          title="2020-06-27T14:56:15+00:00"
        >
          June 27, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Ardella
      </td>
      <td>
        Green
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        95
      </td>
      <td>
        <time
          dateTime={"2020-11-18T03:07:37.125Z"}
          title="2020-11-18T03:07:37+00:00"
        >
          November 18, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Brenna
      </td>
      <td>
        Zboncak
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        54
      </td>
      <td>
        <time
          dateTime={"2019-05-14T03:12:23.351Z"}
          title="2019-05-14T03:12:23+00:00"
        >
          May 14, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Mike
      </td>
      <td>
        O'Keefe
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        5
      </td>
      <td>
        <time
          dateTime={"2019-08-11T20:54:29.510Z"}
          title="2019-08-11T20:54:29+00:00"
        >
          August 11, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Alvena
      </td>
      <td>
        Mohr
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        83
      </td>
      <td>
        <time
          dateTime={"2020-03-21T09:26:22.702Z"}
          title="2020-03-21T09:26:22+00:00"
        >
          March 21, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Dariana
      </td>
      <td>
        Heaney
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        82
      </td>
      <td>
        <time
          dateTime={"2019-05-22T22:51:41.863Z"}
          title="2019-05-22T22:51:41+00:00"
        >
          May 22, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Kailey
      </td>
      <td>
        White
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        50
      </td>
      <td>
        <time
          dateTime={"2020-05-30T19:04:58.819Z"}
          title="2020-05-30T19:04:58+00:00"
        >
          May 30, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Savanah
      </td>
      <td>
        Dibbert
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        81
      </td>
      <td>
        <time
          dateTime={"2020-10-01T02:08:27.583Z"}
          title="2020-10-01T02:08:27+00:00"
        >
          October 1, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Estevan
      </td>
      <td>
        Pfannerstill
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        58
      </td>
      <td>
        <time
          dateTime={"2019-09-01T01:52:28.661Z"}
          title="2019-09-01T01:52:28+00:00"
        >
          September 1, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Celestino
      </td>
      <td>
        Spinka
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        68
      </td>
      <td>
        <time
          dateTime={"2019-04-08T02:34:10.976Z"}
          title="2019-04-08T02:34:10+00:00"
        >
          April 8, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Arjun
      </td>
      <td>
        Treutel
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2019-08-05T18:49:24.213Z"}
          title="2019-08-05T18:49:24+00:00"
        >
          August 5, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Travon
      </td>
      <td>
        Yundt
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        79
      </td>
      <td>
        <time
          dateTime={"2019-11-01T14:31:14.834Z"}
          title="2019-11-01T14:31:14+00:00"
        >
          November 1, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Matt
      </td>
      <td>
        Wunsch
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        4
      </td>
      <td>
        <time
          dateTime={"2020-03-31T04:12:04.011Z"}
          title="2020-03-31T04:12:04+00:00"
        >
          March 31, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Haylie
      </td>
      <td>
        Johnson
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        1
      </td>
      <td>
        <time
          dateTime={"2020-01-18T01:44:02.063Z"}
          title="2020-01-18T01:44:02+00:00"
        >
          January 18, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Prince
      </td>
      <td>
        Reinger
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        37
      </td>
      <td>
        <time
          dateTime={"2021-01-05T14:54:22.171Z"}
          title="2021-01-05T14:54:22+00:00"
        >
          January 5, 2021
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Rollin
      </td>
      <td>
        Olson
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        90
      </td>
      <td>
        <time
          dateTime={"2019-12-15T03:32:21.192Z"}
          title="2019-12-15T03:32:21+00:00"
        >
          December 15, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Nicole
      </td>
      <td>
        Grant
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        18
      </td>
      <td>
        <time
          dateTime={"2019-03-22T11:29:37.737Z"}
          title="2019-03-22T11:29:37+00:00"
        >
          March 22, 2019
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
    <tr>
      <td>
        Eileen
      </td>
      <td>
        Hauck
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
      <td>
        34
      </td>
      <td>
        <time
          dateTime={"2020-07-31T21:33:20.697Z"}
          title="2020-07-31T21:33:20+00:00"
        >
          July 31, 2020
        </time>
      </td>
      <td>
        <span>
           - 
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
